<resources>
    <string name="app_name">ScreenCapture</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_select_album">앨범 선택</string>
    <string name="all_album">모든 앨범</string>
    <string name="empty_album">앨범을 추가하세요.</string>
    <string name="title_activity_album_list">앨범목록</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_create_album">앨범 생성</string>
    <string name="label_album_name">앨범이름</string>
    <string name="label_cancel">취소</string>
    <string name="label_create">생성</string>
    <string name="msg_input_name">이름을 입력해주세요.</string>
    <string name="title_selected_album">앨범선택확인</string>
    <string name="msg_selected_prefix">폴더이름 :</string>
    <string name="msg_saved">저장되었습니다.</string>
    <string name="label_prefix_count">저장개수 :</string>
    <string name="label_suffix_count">개</string>
    <string name="label_empty_album">저장된 사진이 없습니다.</string>
    <string name="label_modify">수정</string>
    <string name="label_album">앨범</string>
    <string name="label_all_image">총사진</string>
    <string name="label_delete">삭제</string>
    <string name="title_delete_album">앨범 삭제</string>
    <string name="msg_selected_album_prefix">선택 앨범 :</string>
    <string name="label_setting">설정</string>
    <string name="title_activity_setting">설정</string>
    <string name="label_common">일반</string>
    <string name="label_app_share">이 앱 공유하기</string>
    <string name="label_lock">잠금설정</string>
    <string name="label_sync_dropbox">Dropbox 동기화</string>
    <string name="label_trigger">트리거 설정</string>
    <string name="label_capture">촬영</string>
    <string name="label_close">닫기</string>
    <string name="label_on_capturehelper">캡처도우미 켜기</string>
    <string name="label_on">ON</string>
    <string name="msg_empty_album">생성된 앨범이 없습니다. 앨범생성 후 실행해주세요.</string>
    <string name="msg_success_save">저장 완료</string>
    <string name="label_capture_enable">캡처도우미 활성화</string>
    <string name="label_copyright">Copyright &#169; 2016, Aviv</string>
    <string name="label_function">기능</string>
    <string name="label_sync">동기화</string>
    <string name="label_save_quality">저장 품질</string>
    <string name="label_save_quality_50">50%</string>
    <string name="label_save_quality_origin">원본</string>
    <string name="label_save_folder">저장 폴더</string>
    <string name="label_check_version">최신 버전 확인</string>
    <string name="label_app_share_title">캡처 도우미</string>
    <string name="label_app_share_desc">편리한 기능이 가득한 캡처 도우미앱으로 초대합니다.</string>
    <string name="share_using">앱을 선택해주세요.</string>
    <string name="label_complete">설정 완료</string>
    <string name="label_title_notice_lock">주의:패턴 분실시 복구 불가능합니다.\\n 꼭 기억해주세요</string>
    <string name="title_valid_lock">잠금 화면</string>
    <string name="title_setting_lock">잠금 설정 화면</string>
    <string name="label_invalid_pattern">입력된 패턴이 너무 짧습니다.</string>
    <string name="label_missmacth_pattern">입력하신 패턴이 옳바르지 않습니다.</string>
    <string name="label_clear_lock">잠금 설정 해제 완료</string>
    <string name="title_activity_imageview">사진보기</string>
    <string name="label_move">이동</string>
    <string name="label_select_all">전체선택</string>
    <string name="label_deselect_all">전체선택 해제</string>
    <string name="msg_album_delete">선택된 사진을 삭제하시겠습니까?</string>
    <string name="title_image_delete">삭제</string>
    <string name="title_image_move">이동</string>
    <string name="msg_contains_album">동일한 이름을 가진 앨범이 존재합니다.</string>
    <string name="title_activity_modify_album">앨범 수정</string>
</resources>
