<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_album_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:theme="@style/NavigationView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <include layout="@layout/nav_header_album_list" />

            <LinearLayout
                android:id="@+id/btn_setting"
                style="@style/nav_box">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/nav_margin"
                    android:src="@drawable/ic_settings_black_24dp" />
                <TextView
                    style="@style/TextAppearance.Content.Default.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_setting" />
            </LinearLayout>

            <LinearLayout style="@style/nav_box">
                <TextView
                    style="@style/TextAppearance.Content.Default.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/nav_margin"
                    android:text="@string/label_capture_enable" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sc_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/nav_margin">

                <View
                    android:id="@+id/v_back_storage"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:background="@color/line_gray" />

                <View
                    android:id="@+id/v_fore_storage"
                    android:layout_width="0dp"
                    android:layout_height="6dp"
                    android:layout_gravity="left"
                    android:background="@color/main_color" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_storage"
                style="@style/TextAppearance.Content.Default.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingBottom="@dimen/default_padding"
                android:paddingRight="@dimen/nav_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_copyright" />

        </LinearLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
